--- a/index.html
+++ b/index.html
@@ -10,30 +10,25 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
   <link rel="stylesheet" href="style/homestyle.css" />
-  <script>
-    const bookImage = () => {
-      fetch("https://striveschool-api.herokuapp.com/books", {
-        method: "GET",
-      })
-        .then((response) => response.json())
-        .then((books) => {
-          for (let i = 0; i < books.length; i++) {
-            let images = books[i].img;
-            let img = document.createElement("img");
-            img.src = images;
-            img.style = "height:400px; width: 300px; object-fit: cover";
-            console.log(books);
-            let card = document.createElement("div");
-            card.className = "card col-4";
-            const row = document.querySelector(".row");
-            row.appendChild(card);
-            card.appendChild(img);
-          }
-        });
-    };
-    window.onload = bookImage;
-  </script>
 
+  <!--
+        You are creating the "shopping cart experience" for a Online Marketplace.
+        You have the list of the available books from the current API:
+        https://striveschool-api.herokuapp.com/books
+        What you have to do is:
+        0) Get all the products from the API using a fetch
+        1) Display the list of items available on the page using template literals `` and .forEach
+        2) Add a "add to cart button"
+        3) When the button is pressed, change the style of the item and add it to another list
+        4) Add "skip" button next to each item
+        5) When pressed, the button should remove from the page the item not interesting from the user
+        6) Add a "search bar". When the user types more than 3 chars, you should filter the content of the page to show only the items with a matching name (hint: use .filter method)
+        7) Allow the user to delete items from the cart lis
+        [EXTRA]
+        8) Add a "clean cart" button, to clean the whole list.
+        9) Create a second "detail page" for the product. When the user clicks on a product name, the app should redirect him to the secondary page, passing the ASIN in query string
+        10) In page "detail" show some details of the selected product
+        -->
   <title>Home</title>
 </head>
 
@@ -84,6 +79,28 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
     -->
+  <script>
+    const bookImage = () => {
+      fetch("https://striveschool-api.herokuapp.com/books", {
+        method: "GET",
+      })
+        .then((response) => response.json())
+        .then((books) => {
+
+
+
+          for (let i = 0; i < books.length; i++) {
+            let images = books[i].img;
+
+
+
+
+
+          }
+        });
+    };
+    window.onload = bookImage;
+  </script>
 </body>
 
 </html>
