--- a/index.html
+++ b/index.html
@@ -11,24 +11,8 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
   <link rel="stylesheet" href="style/homestyle.css" />
 
-  <!--
-        You are creating the "shopping cart experience" for a Online Marketplace.
-        You have the list of the available books from the current API:
-        https://striveschool-api.herokuapp.com/books
-        What you have to do is:
-        0) Get all the products from the API using a fetch
-        1) Display the list of items available on the page using template literals `` and .forEach
-        2) Add a "add to cart button"
-        3) When the button is pressed, change the style of the item and add it to another list
-        4) Add "skip" button next to each item
-        5) When pressed, the button should remove from the page the item not interesting from the user
-        6) Add a "search bar". When the user types more than 3 chars, you should filter the content of the page to show only the items with a matching name (hint: use .filter method)
-        7) Allow the user to delete items from the cart lis
-        [EXTRA]
-        8) Add a "clean cart" button, to clean the whole list.
-        9) Create a second "detail page" for the product. When the user clicks on a product name, the app should redirect him to the secondary page, passing the ASIN in query string
-        10) In page "detail" show some details of the selected product
-        -->
+
+
   <title>Home</title>
 </head>
 
@@ -61,8 +45,10 @@
       </form>
     </div>
   </nav>
-  <div class="container">
-    <div class="row"></div>
+
+
+  <div class="container mt-5">
+    <div class="row row-cols-4"></div>
   </div>
   <!-- Optional JavaScript; choose one of the two! -->
 
@@ -72,7 +58,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
-    crossorigin="anonymous "></script>
+    crossorigin="anonymous"></script>
 
   <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -86,13 +72,39 @@
       })
         .then((response) => response.json())
         .then((books) => {
-
-
-
           for (let i = 0; i < books.length; i++) {
+
+            //select image array
             let images = books[i].img;
 
 
+            //create image container
+            let image = document.createElement("div");
+            image.style = `background-image: url(${images}); background-size: cover; background-repeat: no-repeat; height:400px`
+
+
+            //select row
+            const row = document.querySelector(".row");
+
+            //create card
+            let card = document.createElement("div");
+            card.classList.add("card", "col", "mr-3", "px-0");
+
+            card.innerHTML = ` 
+                                <div class="card-body">
+                                  <h5 class="card-title">Card title</h5>
+                                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                                </div>`
+
+
+            card.prepend(image)
+
+            console.log(card)
+
+
+
+            row.appendChild(card)
 
 
 
