--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous" />
   <link rel="stylesheet" href="style/homestyle.css" />
 
+  <!--
+            You are creating the "shopping cart experience" for a Online Marketplace.
+            You have the list of the available books from the current API:
+            https://striveschool-api.herokuapp.com/books
+            What you have to do is:
+            0) Get all the products from the API using a fetch
+            1) Display the list of items available on the page using template literals `` and .forEach
+            2) Add a "add to cart button"
+            3) When the button is pressed, change the style of the item and add it to another list
+            4) Add "skip" button next to each item
+            5) When pressed, the button should remove from the page the item not interesting from the user
+            6) Add a "search bar". When the user types more than 3 chars, you should filter the content of the page to show only the items with a matching name (hint: use .filter method)
+            7) Allow the user to delete items from the cart list
 
+            [EXTRA]
+            8) Add a "clean cart" button, to clean the whole list.
+            9) Create a second "detail page" for the product. When the user clicks on a product name, the app should redirect him to the secondary page, passing the ASIN in query string
+            10) In page "detail" show some details of the selected product
+        -->
 
   <title>Home</title>
 </head>
@@ -48,7 +66,7 @@
 
 
   <div class="container mt-5">
-    <div class="row row-cols-4"></div>
+    <div class="row d-flex justify-content-between"></div>
   </div>
   <!-- Optional JavaScript; choose one of the two! -->
 
@@ -88,7 +106,7 @@
 
             //create card
             let card = document.createElement("div");
-            card.classList.add("card", "col", "mr-3", "px-0");
+            card.classList.add("card", "col-3", "mx-1", "mb-4", "px-0");
 
             card.innerHTML = ` 
                                 <div class="card-body">
